<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoice"
        android:title="@string/number_of_choice"
        android:summary="@string/number_of_choieces_discription"
        android:persistent="true"
        android:defaultValue="4"
        />

    <MultiSelectListPreference
        android:entries="@array/region_list_for_settings"
        android:entryValues="@array/regions_list"
        android:key="pref_regionsToInclude"
        android:title="@string/word_regions"
        android:summary="@string/word_regions_discription"
        android:persistent="true"
        android:defaultValue="@array/regions_list"
        />

</PreferenceScreen>